src/main/kubernetes/meltingpoc-api-gateway.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: meltingpoc-api-gateway
spec:
  replicas: 1
  template:
    metadata:
     labels:
        app: meltingpoc-api-gateway
    spec:
      containers:
      - name: meltingpoc-api-gateway
        image: registry.wildwidewest.xyz/repository/docker-repository/pocs/meltingpoc-api-gateway
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regsecret
---
kind: Service
apiVersion: v1
metadata:
  name: meltingpoc-api-gateway
spec:
  selector:
    app: meltingpoc-api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meltingpoc-api-gateway
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: meltingpoc.k8.wildwidewest.xyz
    http:
      paths:
      - backend:
          serviceName: meltingpoc-api-gateway
          servicePort: 80
